Updated stars to start from bottom. Overflow:hidden to fix bottom scroll

--- a/zengarden/partials/_stars.scss
+++ b/zengarden/partials/_stars.scss
@@ -40,7 +40,7 @@
     content: " ";
     position: absolute;
     transform-style: preserve-3d;
-    top: 0px;
+    overflow: hidden;
     width: 2px;
     height: 2px;
     background: transparent;
